# gnome-news

./: Makefile.am  configure.ac  gnome-news.in  meson.build  org.gnome.News.json
data/: gnome-news.gresource.xml  meson.build  org.gnome.News.appdata.xml.in  org.gnome.News.desktop.in
data/gtk/: menus.ui
data/icons/: Makefile.am
data/ui/: empty-view.ui  headerbar.ui
gnomenews/: about.py  application.py  toolbar.py  tracker.py
po/: LINGUAS  ca.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fur.po  hr.po  hu.po  id.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po
